kubernetes/apps/matrix/synapse/apps/synapse/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: matrix-synapse
  annotations:
    kubernetes.io/ingress.class: traefik-external
    # traefik.ingress.kubernetes.io/custom-request-headers: X-Forwarded-Host:icecoldlair.com
    # traefik.ingress.kubernetes.io/proxy-body-size: 500m
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`matrix.cloud.icecoldlair.com`)
      kind: Rule
      services:
        - name: matrix-synapse
          port: 8008
          namespace: matrix
      # middlewares:
      #  - name: default-headers
      #    namespace: default
  tls:
    secretName: cloud-icecoldlair-com-prod
